# fastapi-beanie-mongodb-ratings

./: .env  README.md  divisão_de_tarefas.txt  popular_banco.py  pyproject.toml
app/: main.py
app/core/: database.py
app/models/: avaliacao.py  genero.py  midia.py  utilizador.py
app/routes/: avaliacao_routes.py  genero_routes.py  midia_routes.py  utilizador_rountes.py
