[project]
name = "sistema-avaliacoes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "beanie==1.26.0",
    "motor==3.6.0",
    "pydantic[email]>=2.9.0",
    "fastapi-pagination>=0.12.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
]
